.workload/v1alpha1/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "tanzu-namespace"  # +workload:tanzuNamespaceName:type=string
